--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="header-desktop hidden">
 				<ul class="header-content flex-header">
 				<li>Brock Donaldson</li>
-					<div class="social"><li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+					<div class="social"><li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 					<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title" ></span><span class="song-artist"></span></a></li>
 					</div>
@@ -92,7 +92,7 @@
 						<a href="kitsuneApp.html"><img src="images/KitsuneAppHomeM.png" alt="Kitsune App"></a>
 					</div>
 					<div class="project-image">
-						<object type="image/svg+xml" data="images/KitsuneAppHomeV2.svg"> Kitsune App </object>
+						<a href="kitsuneApp.html"><object type="image/svg+xml" data="images/KitsuneAppHomeV2.svg"> Kitsune App </object></a>
 					</div>
 					<div class="project-text kitsune-app">
 						<h4 id="cS-1">case study</h4><h2><a class="underline underline-yellow" href="kitsuneApp.html" >The Kitsune App</a></h2>
@@ -145,9 +145,9 @@
 					<div class="social-about">
 						<ul class="social-links">
 							<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+							<li><a href="https://medium.com/@brockmdonaldson" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a></li>
 							<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-							<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/brockdonaldson" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/brockmdonaldson" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 							<li><a href="https://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
