--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<ul class="header-content flex-header">
 					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social">
-						<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+						<div class="social"><li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
 					</div>
