--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -1,27 +1,27 @@
 <!--
 
-         ``       .``///:///:oyyyyyy+///::+/.`.`
-         `````   ossymmdhdddydmmmmmmddddhhmmdssh.
+         ``       .``///:///:yyyyyyy:///:///``.
+         ````    ossymmdhdddydmmmmmmddddhhmmdssh.
           ```` .oyyhmmmmmddhhdddddddhhdddmmmmdyyh:
             .:+hdhyhmmdhhhhdddhdddhdddhhyhhmmdyyhds/.
       ..-:+oyyyyhddyyhddhhhmdsyymhsyhmdmNmmhhyhddhyyyys+:-`
      :ssssyyhhddhyhhdhhdhsyhmhddmmdhddddmMmmmdyhhhddhhyyyyys`
-   ``ohhddmmmmmdhhddmyshmdhyso+///++syhdmmdmNMNmyhmmmmmmdhhy:
-   `ommmmmmmmmhhddhhhdddy/----......---/ohdmmmmNmyossssyhmmmh-
-   .dmmmmmmmmhhymdhdddy++////////////+////+hmmNms/::::::/+hdh:
-   /mmmmmmmmdhshhhmmd+-+ssssssssssssssssss--smm+::-:::::::+md/
-   odddhyooooysddmmd+--+ssssssssssssssssso-..sms:::::::::/+hh:
-   /hy+:-----/+ymmms.-.+ssssssssssssssssso-..-dmy+//////+shhhs-
-  `hd+:-:::---:/hmd/.--+ssssssssssssssssso-...smmmddyohhdmmmmm/-
-  .hd/--::::--:/ymd:...+ssssssyyyyyyssssso-...smmmmmdymmmmmmmm+:
-  `sho:---:---:+dmd+.--+ssssssssssssssssss....ymmhyysoooyhdmdd/`
-   +hhs+/::::+oohmmy---+ssssssssssssssssso.../dd+/:::::://syh/`
-   ommmmdhhhyhoo+shms--+ssssssssssssssssso-.:hm+::-:::::::/dd/
-   :mmmmmmmmmhyo++sddh//ooooooooooooooooo+-+dmmo::::::::::odd:
-   `hmmmmmmmmdhyo+/+ymdy+:---.--:::-----:ohmmdhmy+//////+ydmd:
-    /ddmmmmmmmmhhs++osyddho/:-------:/oydddhddddhyhdhhhdmmdds.
+    `ohhddmmmmmdhhddmyshmdhyso+///++syhdmmdmNMNmyhmmmmmmdhhy:
+    ommmmmmmmmhhddhhhdddy/..............+ohdmmmmNmyossssyhmmmh-
+   .dmmmmmmmmhhymdhdddy....................+hmmNm........++hdh:
+   /mmmmmmmmdhshhhmmd...ssssssssssssssssss..smm+..........+md//
+   odddhyooooysddmmd+...ssssssssssssssssss...sms........../+hh:
+   /hy+.......+ymmm+....ssssssssssssssssss...-dmy+......+shhhs-
+   hd+........./hmd/....ssssssssssssssssss....smmmddyohhdmmmmm/
+  .hd/........./ymd:....ssssssssssssssssss....smmmmmdymmmmmmmm+
+   sho.........+dmd+....ssssssssssssssssss....ymmhyysoooyhdmdd/
+   +hhs+.....+oohmmy....ssssssssssssssssss.../dd+/......//syh//
+   ommmmdhhhyhoo+shms...ssssssssssssssssss...hm+........../dd//
+   :mmmmmmmmmhyo++sddh..ssssssssssssssssss..+dmmo..........odd:
+   `hmmmmmmmmdhyo+/+ymdy...................mmdhmy+......+ydmd:
+    /ddmmmmmmmmhhs++osyddho............oydddhddddhyhdhhhdmmdd
      /syyhhddmmmhhyso+/oysddddhyyyhhdddhmhhhddddydmmddhhhyyo.
-     .:/+ossyyhhyhdhysoo+/+shyyydhyyhdsshmdddhhdhyhhyyyyso+:
+      :/+ossyyhhyhdhysoo+/+shyyydhyyhdsshmdddhhdhyhhyyyyso+:
          `.-:+shddhyhdhyysoso+++so+oshssyhhhdhyhddyso:-.
               ./yyydmmmmdhhyyyyyyyyyyyhhddmmmmyyys:`
                 .osoddddyyyyhddddddmdhhhhdmmmhss+`
