--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -80,7 +80,7 @@
 				<ul class="header-content flex-header">
 					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social">
-						<li><a href="http://www.terrestriial.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+						<li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
 					</div>
@@ -302,7 +302,7 @@
 			<div class="footer">
 				<ul class="footer-content flex-sb">
 					<li><h5>Brock Donaldson © 2017</h5></li>
-					<li><h5><em>Despite knowing the journey and where it leads, I embrace it, and I welcome every moment of it.</em></h5></li>
+					<li><h5><em>16-12-5-1-19-5 8-9-18-5 13-5</em></h5></li>
 				</ul>
 			</div>
 		</div>
