--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 	<meta property="og:image:width" content="1200">
 
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.min.css">
   <link rel="icon" type="image/png" sizes="96x96" href="images/fav.png">
@@ -55,6 +56,7 @@
   <script type="text/javascript" src="js/TweenMax.min.js"></script>
 	<script type="text/javascript" src="js/ScrollMagic.js"></script>
 	<script type="text/javascript" src="js/animation.gsap.js"></script>
+
 
 
 </head>
@@ -85,7 +87,7 @@
 				<ul class="header-content flex-header">
 					<a href="index.html"><li>Brock Donaldson</li></a>
 					<div class="social">
-						<div class="social"><li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 						<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 						<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><i class="fa fa-spotify" aria-hidden="true"></i></a></li>
 					</div>
@@ -97,16 +99,15 @@
 
 			<!-- Intro
 			––––––––––––––––––––––––––––––-->
-			<div class="highlight-colour"></div>
-			<div class="intro flex-header">
+			<div class="intro flex-center">
 				<div class="intro-text">
-					<h2 class="intro-h2 hidden">Hey, I’m Brock</h2><h3 class="intro-h3 hidden">UX/UI Designer and Aspiring Astronaut</h3>
+					<div class="yellow-rect hidden"></div><h2 class="intro-h2 hidden">Hey, I’m Brock.</h2><h3 class="intro-h3 hidden">A Designer and Aspiring Astronaut. I have always been drawn to understanding how people and products interact. Whether it's pulling a push door for the third time that day, or rationalizing a cold brew at 4pm with friends, the smallest moments make me rethink opporutunities for better solutions.</h3>
 				</div>
 			</div>
 
 			<div class="intro-mobile flex-header">
 				<div class="intro-mobile-text">
-					<h2>Hey,<br> I’m Brock</h2><h3>UX/UI Designer and Aspiring Astronaut</h3>
+					<h2>Hey,<br> I’m Brock</h2><h3> Designer and Aspiring Astronaut</h3>
 				</div>
 			</div>
 
@@ -126,7 +127,7 @@
 						<a href="kitsuneApp.html"><object type="image/svg+xml" data="images/KitsuneAppHomeV2.svg"> Kitsune App </object></a>
 					</div>
 					<div class="project-text kitsune-app">
-						<h4 id="cS-1">case study</h4><h2><a class="underline underline-yellow" href="kitsuneApp.html" >The Kitsune App</a></h2>
+						<h4 id="cS-1">case study</h4><h2><a class="underline underline-yellow" href="kitsuneApp.html">The Kitsune App</a></h2>
 					</div>
 				</div>
 			</div>
@@ -168,9 +169,8 @@
 				<div class="about-content">
 
 					<h2> …houston? </h2>
-					<p class="larger-p">I’m a designer, space enthusiast, and advocate for using design as a practice to improve the lives of everyone. <!--and people watcher. --></h3>
-					<p> I have always been drawn to understanding how people and products interact. Whether that’s myself struggling for the third time that day to pull a push door, or watching my friends decide if a cold brew at 4pm is the right decision, each makes me rethink the potential for better solutions.  </p>
-					<p>I live and work in Toronto, where I've been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
+					<p class="larger-p">I’m a designer, space enthusiast, and advocate for using design as a practice to improve the lives of everyone.</h3>
+					<p>I currently live and work in Toronto, where I've been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
 					<p>I’m always interested in trying new things or collaborating on projects. If you’d like to get ahold of me, shoot over an email to <a href="mailto:brockmdonaldson@gmail.com"> brockmdonaldson@gmail.com</a>. </p>
 					<p>✌️️ </p>
 					<div class="social-about">
@@ -240,7 +240,7 @@
 						<div class="reco-list flex-sb-links">
 							<div class="recommendations">
 								<ul class="reco-links">
-								<li><a href="https://open.spotify.com/artist/1wiBLzTI7z9RUwEpNPdFT6" target="_blank"> // Mase </a></li>
+								<li><a href="https://open.spotify.com/artist/1wiBLzTI7z9RUwEpNPdFT6" target="_blank"> // Mase </a></l>
 									<li><a href="https://open.spotify.com/artist/2UwJRAgSOi1zcLkvUNc8XL" target="_blank"> // Anamanaguchi</a></li>
 									<li><a href="https://open.spotify.com/artist/4pb4rqWSoGUgxm63xmJ8xc" target="_blank"> // Madeon</a></li>
 								</ul>
@@ -254,7 +254,6 @@
 							</div>
 						</div>
 					</div>
-
 </div>
 
 	<!-- Closing Frame Divs
@@ -273,7 +272,7 @@
 
 window.onload = function() {
     if (window.jQuery) {
-    	$(".highlight-colour").addClass("extend");
+    	$(".yellow-rect").addClass("extend");
     }
   }
 
@@ -286,6 +285,8 @@ window.onload = function() {
    		$(".intro-h2").addClass("animated fadeIn")
    		$(".intro-h3").removeClass("hidden");
    		$(".intro-h3").addClass("animated fadeIn")
+   		$(".yellow-rect").removeClass("hidden");
+   		$(".yellow-rect").addClass("animated fadeIn")
 });
 			$(".animation-projects").removeClass("hidden");
    		$(".animation-projects").addClass("animated fadeIn");
