--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			––––––––––––––––––––––––––––––-->
 			<div class="intro flex-center">
 				<div class="intro-text">
-					<div class="yellow-rect hidden"></div><h2 class="intro-h2 hidden">Hey, I’m Brock.</h2><h3 class="intro-h3 hidden">A Designer and Aspiring Astronaut. I have always been drawn to understanding how people and products interact. Whether it's pulling a push door for the third time that day, or rationalizing a cold brew at 4pm with friends, the smallest moments make me rethink opporutunities for better solutions.</h3>
+					<div class="yellow-rect hidden"></div><h2 class="intro-h2 hidden">Hey, I’m Brock.</h2><h3 class="intro-h3 hidden">A Designer and Aspiring Astronaut. I have always been drawn to understanding how people and products interact. Whether it's pulling a push door for the third time that day, or rationalizing a cold brew at 4pm with friends, the smallest moments make me rethink opportunities for better solutions.</h3>
 				</div>
 			</div>
 
