--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 			<div class="intro-mobile flex-header">
 				<div class="intro-mobile-text">
-					<h2>Hey,<br> I’m Brock</h2><h3> Designer and Aspiring Astronaut</h3>
+					<h2>Hey,<br> I’m Brock</h2><h3> Designer & Space Kid</h3>
 				</div>
 			</div>
 
@@ -235,21 +235,21 @@
 
 					<div class="recommendations-container flex-sb-links">
 						<div class="reco-title">
-							<h4> [LISTEN] <br> <br> SPRING <br>2017 </h4>
+							<h4> [LISTEN] <br> <br> SUMMER <br>2017 </h4>
 						</div>
 						<div class="reco-list flex-sb-links">
 							<div class="recommendations">
 								<ul class="reco-links">
-								<li><a href="https://open.spotify.com/artist/1wiBLzTI7z9RUwEpNPdFT6" target="_blank"> // Mase </a></l>
-									<li><a href="https://open.spotify.com/artist/2UwJRAgSOi1zcLkvUNc8XL" target="_blank"> // Anamanaguchi</a></li>
-									<li><a href="https://open.spotify.com/artist/4pb4rqWSoGUgxm63xmJ8xc" target="_blank"> // Madeon</a></li>
+								<li><a href="https://open.spotify.com/artist/76B4kqqCUdVdAo9AG5LNWF" target="_blank"> // Night Tempo </a></l>
+									<li><a href="https://open.spotify.com/artist/50VoYemccTaftNfFqWtlXd" target="_blank"> // Superfruit</a></li>
+									<li><a href="https://open.spotify.com/artist/2h93pZq0e7k5yf4dywlkpM" target="_blank"> // Frank Ocean</a></li>
 								</ul>
 							</div>
 							<div class="recommendations p-75">
 								<ul class="reco-links">
-									<li><a href="https://macross82-99.bandcamp.com/" target="_blank"> // Macross 82-99 </a></li>
-									<li><a href="https://open.spotify.com/artist/30FDJPN3RtwJZ20g5YGCRX" target="_blank"> // Yung Bae </a></li>
-									<li><a href="https://open.spotify.com/artist/0Q2Tc5yZFJpumLMc7Yz4e4" target="_blank"> // Tomppabeats </a></li>
+									<li><a href="https://open.spotify.com/artist/4pG6hTUl9HhyftfJQQI7np" target="_blank"> // Maitro </a></li>
+									<li><a href="https://open.spotify.com/artist/2Yb5uttTDOir3KFJlAhVxh" target="_blank"> // LEO </a></li>
+									<li><a href="https://open.spotify.com/artist/3dz0NnIZhtKKeXZxLOxCam" target="_blank"> // Porter Robinson </a></li>
 								</ul>
 							</div>
 						</div>
