--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 					<div class="social"><li><a href="http://www.twitter.com/brockmdonaldson" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 					<li><a href="http://www.instagram.com/brockmdonaldson" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 					<li><a href="https://open.spotify.com/user/donabroc" target="_blank"><span class="song-title" ></span><span class="song-artist"></span></a></li>
+
 					</div>
 				</ul>
 			</div>
@@ -235,21 +236,22 @@
 
 					<div class="recommendations-container flex-sb-links">
 						<div class="reco-title">
-							<h4> [LISTEN] <br> <br> SUMMER <br>2017 </h4>
+							<h4> [LISTEN] <br> <br> AUTUMN <br>2017 </h4>
 						</div>
 						<div class="reco-list flex-sb-links">
 							<div class="recommendations">
 								<ul class="reco-links">
-								<li><a href="https://open.spotify.com/artist/76B4kqqCUdVdAo9AG5LNWF" target="_blank"> // Night Tempo </a></l>
+								<li><a href="https://open.spotify.com/artist/76B4kqqCUdVdAo9AG5LNWF" target="_blank"> // Night Tempo</a></l>
 									<li><a href="https://open.spotify.com/artist/50VoYemccTaftNfFqWtlXd" target="_blank"> // Superfruit</a></li>
-									<li><a href="https://open.spotify.com/artist/2h93pZq0e7k5yf4dywlkpM" target="_blank"> // Frank Ocean</a></li>
+									<li><a href="https://open.spotify.com/artist/3dz0NnIZhtKKeXZxLOxCam" target="_blank"> // Porter Robinson </a></li>
+
 								</ul>
 							</div>
 							<div class="recommendations p-75">
 								<ul class="reco-links">
 									<li><a href="https://open.spotify.com/artist/4pG6hTUl9HhyftfJQQI7np" target="_blank"> // Maitro </a></li>
 									<li><a href="https://open.spotify.com/artist/2Yb5uttTDOir3KFJlAhVxh" target="_blank"> // LEO </a></li>
-									<li><a href="https://open.spotify.com/artist/3dz0NnIZhtKKeXZxLOxCam" target="_blank"> // Porter Robinson </a></li>
+									<li><a href="https://open.spotify.com/artist/2h93pZq0e7k5yf4dywlkpM" target="_blank"> // Frank Ocean</a></li>
 								</ul>
 							</div>
 						</div>
@@ -302,6 +304,8 @@ window.onload = function() {
     var artist = data.recenttracks.track[0].artist["#text"];
     var song = data.recenttracks.track[0]["name"];
     var player = artist + song;
+
+
 
     	if (window.innerWidth < 900 && player.length > 35) {
     		song = song.substring (0,20)+"…";
