--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
 				<!-- Header (Desktop)
 			––––––––––––––––––––––––––––––-->
+
 			<div class="header-desktop hidden">
 				<ul class="header-content flex-header">
 				<li>Brock Donaldson</li>
@@ -102,7 +103,7 @@
 			––––––––––––––––––––––––––––––-->
 			<div class="intro flex-center">
 				<div class="intro-text">
-					<div class="yellow-rect hidden"></div><h2 class="intro-h2 hidden">Hey, I’m Brock.</h2><h3 class="intro-h3 hidden">A Designer and Aspiring Astronaut. I have always been drawn to understanding how people and products interact. Whether it's pulling a push door for the third time that day, or rationalizing a cold brew at 4pm with friends, the smallest moments make me rethink opportunities for better solutions.</h3>
+					<div class="yellow-rect hidden"></div><h2 class="intro-h2 hidden">Hey, I’m Brock.</h2><h3 class="intro-h3 hidden">Designer and Aspiring Astronaut. I have always been drawn to understanding how people and products interact. Whether it's pulling a push door for the third time that day, or rationalizing a cold brew at 4pm with friends, the smallest moments make me rethink opportunities for better solutions.</h3>
 				</div>
 			</div>
 
@@ -128,7 +129,7 @@
 						<a href="kitsuneApp.html"><object type="image/svg+xml" data="images/KitsuneAppHomeV2.svg"> Kitsune App </object></a>
 					</div>
 					<div class="project-text kitsune-app">
-						<h4 id="cS-1">case study</h4><h2><a class="underline underline-yellow" href="kitsuneApp.html">The Kitsune App</a></h2>
+						<h4 id="cS-1">ux/ui design</h4><h2><a class="underline underline-yellow" href="kitsuneApp.html">Kitsune App</a></h2>
 					</div>
 				</div>
 			</div>
@@ -142,7 +143,7 @@
 						<object type="image/svg+xml" data="images/KitsuneBoardHomeV2.svg"> Kitsune Board </object>
 					</div>
 					<div class="project-text">
-						<h4 id="cS-2">case study</h4><h2><a class="underline underline-blue" href="kitsuneBoard.html">The Kitsune Board</a></h2>
+						<h4 id="cS-2">product design</h4><h2><a class="underline underline-blue" href="kitsuneBoard.html">Kitsune Board</a></h2>
 					</div>
 				</div>
 			</div>
@@ -157,7 +158,7 @@
 						<object type="image/svg+xml" data="images/VitaAppHomeV2.svg"> Vita Donor App </object>
 					</div>
 					<div class="project-text">
-						<h4 id="cS-3">app design</h4><h2><a class="underline underline-red" href="vitaDonationApp.html">Vita Donor App</a></h2>
+						<h4 id="cS-3">ux/ui design</h4><h2><a class="underline underline-red" href="vitaDonationApp.html">Vita Donor</a></h2>
 					</div>
 				</div>
 			</div>
@@ -169,8 +170,7 @@
 			<div class="about-container flex-center ">
 				<div class="about-content">
 
-					<h2> …houston? </h2>
-					<p class="larger-p">I’m a designer, space enthusiast, and advocate for using design as a practice to improve the lives of everyone.</h3>
+					<p class="larger-p">I’m a designer, space enthusiast, and advocate for using design as to help improve the lives of anyone and everyone.</h3><br><br>
 					<p>I currently live and work in Toronto, where I've been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
 					<p>I’m always interested in trying new things or collaborating on projects. If you’d like to get ahold of me, shoot over an email to <a href="mailto:brockmdonaldson@gmail.com"> brockmdonaldson@gmail.com</a>. </p>
 					<p>✌️️ </p>
