--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 							<div class="recommendations">
 								<ul class="reco-links">
 									<li><a href="http://www.imdb.com/title/tt1478338" target="_blank"> // Bridesmaids </a></li>
+									<li><a href="http://www.imdb.com/title/tt1856101" target="_blank"> // Blade Runner 2049 </a></li>
 									<li><a href="http://www.imdb.com/title/tt2395695" target="_blank"> // Cosmos </a></li>
 									<li><a href="http://www.imdb.com/title/tt1570728" target="_blank"> // Crazy Stupid Love </a></li>
 									<li><a href="http://www.imdb.com/title/tt1282140" target="_blank"> // Easy A </a></li>
@@ -204,6 +205,7 @@
 									<li><a href="http://www.imdb.com/title/tt4846340" target="_blank"> // Hidden Figures </a></li>
 									<li><a href="http://www.imdb.com/title/tt0102057" target="_blank"> // Hook </a></li>
 									<li><a href="http://www.imdb.com/title/tt0433400" target="_blank"> // Just Friends </a></li>
+									<li><a href="http://www.imdb.com/title/tt4574334" target="_blank"> // Stranger Things </a></li>
 									<li><a href="http://www.imdb.com/title/tt0458352" target="_blank"> // The Devil Wears Prada</a></li>
 									<li><a href="http://www.imdb.com/title/tt0119116" target="_blank"> // The Fifth Element </a></li>
 									<li><a href="http://www.imdb.com/title/tt0157246" target="_blank"> // Will & Grace </a></li>
