--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				<div class="about-content">
 
 					<p class="larger-p">I’m a designer, space enthusiast, and advocate for using design to help improve the lives of anyone and everyone.</h3><br><br>
-					<p>I currently live and work in Toronto, where I've been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am working on some exciting side projects with my friends through a design collective called <a href="http://smolhax.co" target="_blank"> Smolhax. </a></p>
+					<p>I currently live and work in Toronto, where I've been designing digital experiences at <a href="http://www.konradgroup.com" target="_blank">Konrad Group</a> since my graduation from the <a href="http://design.ampd.yorku.ca/" target="_blank"> York / Sheridan’s Bachelor of Design</a> program. I’ve also recently re-entered the world of code and am experimenting with some <a href="https://uxdesign.cc/coding-my-first-sketch-plugin-930f7996dff6" target="_blank"> fun projects</a> to improve my own workflow. </p>
 					<p>I’m always interested in trying new things or collaborating on projects. If you’d like to get ahold of me, shoot over an email to <a href="mailto:brockmdonaldson@gmail.com"> brockmdonaldson@gmail.com</a>. </p>
 					<p>✌️️ </p>
 					<div class="social-about">
