--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 					<div class="recommendations-container flex-sb-links">
 						<div class="reco-title">
-							<h4> [LISTEN] <br> <br> WINTER <br>2018 </h4>
+							<h4> [LISTEN] <br> <br> AUTUMN <br>2017 </h4>
 						</div>
 						<div class="reco-list flex-sb-links">
 							<div class="recommendations">
