--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -274,7 +274,7 @@
 		<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
 					<h4 class="type-challenge">[LEARNING OUTCOME]</h4>
-					<h2> This product helped to strengthen my overall design process by allowing me to complete more focused user jouneys & user research, resulting in key pain-points that I was then able to build into featured solutions.</h2>
+					<h2> This product helped to strengthen my overall design process by allowing me to complete more focused user journeys & user research, resulting in key pain-points that I was then able to build into featured solutions.</h2>
 				</div>
 			</div>
 
