--- a/vitaDonationApp.html
+++ b/vitaDonationApp.html
@@ -57,7 +57,7 @@
 
 	<div class="site-frame">
 
-		<div class="container">
+		<div class="container_proj">
 
 			<!-- Header (Desktop)
 			––––––––––––––––––––––––––––––-->
@@ -110,7 +110,7 @@
 
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
-					<h4 class="type-challenge">[CHALLENGE]</h4>
+					<h4 class="type-challenge">CHALLENGE</h4>
 					<h2> To create an application that helps streamline the blood donation process, while also articulating key donation information to users.</h2>
 				</div>
 			</div>
@@ -150,7 +150,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> [PRINT VERSION] </h4>
+					<h4> PRINT VERSION </h4>
 					<p>Physical information pamphlets would also be offered to those interested in a take-home alternative. These pamphlets cover the same information, while at the same time offering a unique user experience.</p>
 				</div>
 			</div>
@@ -171,7 +171,7 @@
 
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
-					<h4 class="type-challenge">[LEARNING OUTCOME]</h4>
+					<h4 class="type-challenge">LEARNING OUTCOME</h4>
 					<h2> I was able to gain a greater understanding on how to present complex topics to a broader audience.</h2>
 				</div>
 			</div>
@@ -181,12 +181,12 @@
 			<div class="section-full flex-center">
 				<div class="pull-tech-color blue flex-center rounded-corners">
 					<div class="pull-tech flex-sb">
-						<div class="cto-text white">
+						<div class="cta-text white">
 							<h2>The Kitsune App is a product that advocates for alternative transportation.</h2>
 							<a href="kitsuneApp.html""><h4>View Case Study</h4></a>
 						</div>
 						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneAppCTO.svg"> Kitsune App CTO </object>
+							<object type="image/svg+xml" data="images/KitsuneAppcta.svg"> Kitsune App cta </object>
 						</div>
 					</div>
 				</div>
