--- a/vitaDonationApp.html
+++ b/vitaDonationApp.html
@@ -186,7 +186,7 @@
 							<a href="kitsuneApp.html""><h4>View Case Study</h4></a>
 						</div>
 						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneAppcta.svg"> Kitsune App cta </object>
+							<object type="image/svg+xml" data="images/KitsuneAppCTA.svg"> Kitsune App cta </object>
 						</div>
 					</div>
 				</div>
