--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -287,7 +287,7 @@
 							<a href="kitsuneBoard.html"><h4>View Case Study</h4></a>
 						</div>
 						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneBoardcta.svg"> Kitsune App cta </object>
+							<object type="image/svg+xml" data="images/KitsuneBoardCTA.svg"> Kitsune App cta </object>
 						</div>
 					</div>
 				</div>
