--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 						<div class="reco-list flex-sb-links">
 							<div class="recommendations">
 								<ul class="reco-links">
-									<li><a href="https://open.spotify.com/user/e4xy2srwpgk6uq7j5jokzm3iv?si=5X9ySM8XQaCDxUVLz6XfMg" target="_blank"> // Tape Club Internation </a> <a href="http://www.aaronmohr.com" target="_blank">(Aaron Mohr)</a></li>
+									<li><a href="https://open.spotify.com/user/e4xy2srwpgk6uq7j5jokzm3iv?si=5X9ySM8XQaCDxUVLz6XfMg" target="_blank"> // Tape Club International </a> <a href="http://www.aaronmohr.com" target="_blank">(Aaron Mohr)</a></li>
 								<li><a href="https://open.spotify.com/artist/1uiEZYehlNivdK3iQyAbye?si=OJ7ZTOWXRAW_N308wcHaag" target="_blank"> // Younger Now  </a></li>
 									<li><a href="https://open.spotify.com/album/0fwZXPXf41aF6H0CN3UtXV?si=JnrHyP1DQwCytnnZy4u7XQ" target="_blank"> // Love Me / Love Me Not  </a></li>
 									
