--- a/kitsuneBoard.html
+++ b/kitsuneBoard.html
@@ -98,9 +98,8 @@
 			</div>
 
 			<div class="highlight-colour-project blue"></div>
-
 			<div class="project-header">
-				<h1 class="project-title hidden">The Kitsune Board</h1>
+				<h1 class="project-title hidden">Kitsune Board</h1>
 			</div>
 
 
@@ -110,8 +109,8 @@
 
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
-					<h4 class="type-challenge">CHALLENGE</h4>
-					<h2> To find an effective and alternative solution to the urban commute and transportation through an engaging, user-connected product.</h2>
+					<h4 class="type-challenge">challenge —</h4>
+					<h2> To find an effective, alternative solution to the urban commute through an engaging, user-connected product.</h2>
 				</div>
 			</div>
 
@@ -144,7 +143,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> INITIAL RESEARCH </h4>
+					<h4> initial research — </h4>
 					<p>By looking beyond similar, more traditional products (skateboards and Penny boards), I created a board that is compact enough for everyday use but with the goal of building a change. Two key features help this product reach this goal; the board itself has a locking and folding feature providing ease of transport and storage, as well as a companion app to create a system of engaged, connected users.</p>
 
 					<p>The Kitsune Board is directed at a wide demographic, who are open to new products, and seeking alternative modes of transportation. Many living in urban centres rely heavily on the public transit system. While their current system works, I wanted to present them with improvements. Few have luxury of living near a public transit platform; they lose valuable time commuting to and from transit options.</p>
@@ -154,8 +153,8 @@
 			<div class="section-full flex-center">
 				<div class="pull-tech-color grey flex-center">
 					<div class="pull-tech  flex-sb">
-						<div class="pull-tech-text charcoal">
-							<h2> While foldability allows for a more portable solution, it’s also meant to build a strong user/product relationship. </h2>
+						<div class="pull-tech-text light-charcoal">
+							<h2> While foldability allows for a more portable solution, it’s also meant to build a strong user/product bond. </h2>
 						</div>
 						<div class="pull-tech-drawing">
 							<object type="image/svg+xml" data="images/KitsuneBoardTech1.svg"> Kitsune App Technical Drawing (Folding) </object>
@@ -166,7 +165,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> RESEARCH CONCLUSION</h4>
+					<h4>research conclusion —</h4>
 					<p>When looking towards the future, I wanted to explore new possibilities in human commuting behaviour that are rarely reviewed. By identifying pain points, I sought to improve upon congested areas of a user’s commute. These primarily being between transit systems where the user finds themselves walking for five to ten minutes to meet their transfer. Finding solutions to these pain points allowed me to solve the problems as a whole.</p>
 				</div>
 			</div>
@@ -175,14 +174,14 @@
 				<div class="pull-tech-color blue flex-center">
 					<div class="pull-quote flex-column">
 						<h4> Johnathan Ive</h4>
-						<h2> There is beauty when something works and it works intuitively, and it doesn’t expect you to have to read an instruction book. </h2>
+						<h2> There is beauty when something works and it works intuitively. </h2>
 					</div>
 				</div>
 			</div>
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-				<h4>COMPETITOR RESEARCH</h4>
+				<h4>competitor research —</h4>
 					<p>I started by looking for reference material to help me gauge the general size and dimensions of the board. I looked for weak points in the design of similar boards and ways to improve them. </p>
 
 					<p>One of the leaders in the plastic skateboard market is Penny. Their boards are popular because of their relatively retro style and size. By looking to their design as inspiration, I could find ways to improve my own board while focusing on human centred design approach.</p>
@@ -195,8 +194,8 @@
 			<div class="section-full flex-center">
 				<div class="pull-tech-color grey flex-center">
 					<div class="pull-tech flex-sb">
-						<div class="pull-tech-text charcoal">
-							<h2> The bottom grip pattern of the board represents the nine tails of the Kitsune Fox. </h2>
+						<div class="pull-tech-text light-charcoal">
+							<h2> The bottom grip pattern represents the nine tails of the Kitsune Fox. </h2>
 						</div>
 						<div class="pull-tech-drawing">
 							<object type="image/svg+xml" data="images/KitsuneBoardTech2.svg"> Kitsune App Technical Drawing (Folding) </object>
@@ -208,7 +207,7 @@
 			<div class="section-padding flex-center">
 				<div class="content-container">
 
-					<h4>USER PERSONAS / JOB STORIES</h4>
+					<h4>user personas / job stories —</h4>
 					<p>In order to allow for a true understanding of the audience this product would be directed towards I created user personas to help identify the target audience.</p>
 
 					<p><strong>Jamey 20, Student</strong><br>
@@ -238,7 +237,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> PRODUCT RESEARCH </h4>
+					<h4> product research — </h4>
 					<p>To find a cohesive solution to the problems presented in the user personas I put together a couple of key touch points I wanted to address when creating the product.</p>
 
 					<p><strong>Portability</strong><br>In Thomas’ daily commute, to reduce time, uses roller blades rather walking. Once there, however, he must remove, and carry bulky rollerblade with him on this way to the office. </p>
@@ -255,7 +254,7 @@
 				<div class="pull-tech-color blue flex-center">
 					<div class="pull-tech  flex-sa">
 						<div class="pull-tech-text">
-							<h4> BRAND CREATION</h4>
+							<h4>brand creation—</h4>
 							<p> The name Kitsune comes from the Japanese word for fox. Common figures in Japanese folklore, the kitsune are often depicted as tricksters, but also represent wisdom and transformation.</p>
 
 							<p>A common trait related to the Kitsune is shapeshifting—a trait that I wanted to be prevalent when designing the skateboard. As skateboarding is sometimes seen as a unique and youthful mode of transportation, I wanted to find a brand figure that relates to those tropes, while also bringing in new traits to the product.</p>
@@ -270,7 +269,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> CREATION / PROTOTYPING </h4>
+					<h4> creation / prototyping — </h4>
 					<p>To take my drawings and illustrator wires to a physical product, I used the 3D fabrication program Rhino. By building the centeral elements in Illustrator, I was able to import and work seamlessly between the two programs. </p>
 					<p>After 5 prototype versions, I handed off the model to Shapeways, a 3D printing company in New York. They used a <a href="https://youtu.be/BTTnaI4EYnY" target="_blank"> powered plastic 3D printing process </a> to produce the board. This method provided a stronger final product than that offered using the standard consumer injection mold process. After receiving the two 3D printed pieces, I attached the hinge and wheel hardware, completing the board. </p>
 
@@ -280,17 +279,18 @@
 
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
-					<h4 class="type-challenge">LEARNING OUTCOME</h4>
-					<h2> Throughout this product's creation I was able to learn and understand the key principles of Human Centered Design and how they relate to all aspects of design.</h2>
+					<h4 class="type-challenge">learning outcome —</h4>
+					<h2> Throughout this product's creation, I was able to learn and understand the key principles of Human Centered Design and how they relate to all aspects of design.</h2>
 				</div>
 			</div>
 
 			<div class="section-full flex-center">
 				<div class="pull-tech-color blue flex-center rounded-corners">
 					<div class="pull-tech flex-sb">
-						<div class="cta-text white">
-							<h2>The companion app allows users to track ride stastitics in real time using installed hardware in the board.</h2>
-							<a href="kitsuneApp.html""><h4>View Case Study</h4></a>
+						<div class=cta-flex>
+						<div class="pull-tech-text">
+							<h2 class="white">The companion app allows users to track ride stastitics in real time using installed hardware in the board.</h2></div>
+							<div class= "cta-text"><a href="kitsuneBoard.html"><h4>View case study</h4></a></div>
 						</div>
 						<div class="pull-tech-drawing">
 							<object type="image/svg+xml" data="images/KitsuneAppCTA.svg"> Kitsune App cta </object>
@@ -307,7 +307,7 @@
 		<div class="footer-container ">
 			<div class="footer">
 				<ul class="footer-content flex-sb">
-					<li><h5>Brock Donaldson © 2018</h5></li>
+					<li><h5>Brock Donaldson © 2019</h5></li>
 					<li><h5><em></em></h5></li>
 				</ul>
 			</div>
@@ -316,7 +316,7 @@
 		<div class="footer-container-mobile">
 			<div class="footer">
 				<ul class="footer-content flex-sb">
-					<li><h5>Brock Donaldson © 2018</h5></li>
+					<li><h5>Brock Donaldson © 2019</h5></li>
 			</div>
 		</div>
 
