--- a/vitaDonationApp.html
+++ b/vitaDonationApp.html
@@ -100,7 +100,7 @@
 			<div class="highlight-colour-project red"></div>
 
 			<div class="project-header">
-				<h1 class="project-title hidden">Vita Donor App</h1>
+				<h1 class="project-title hidden">Vita Donor</h1>
 			</div>
 
 
@@ -110,7 +110,7 @@
 
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
-					<h4 class="type-challenge">CHALLENGE</h4>
+					<h4 class="type-challenge">challenge —</h4>
 					<h2> To create an application that helps streamline the blood donation process, while also articulating key donation information to users.</h2>
 				</div>
 			</div>
@@ -150,7 +150,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> PRINT VERSION </h4>
+					<h4>print version —</h4>
 					<p>Physical information pamphlets would also be offered to those interested in a take-home alternative. These pamphlets cover the same information, while at the same time offering a unique user experience.</p>
 				</div>
 			</div>
@@ -171,7 +171,7 @@
 
 			<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
-					<h4 class="type-challenge">LEARNING OUTCOME</h4>
+					<h4 class="type-challenge">learning outcome —</h4>
 					<h2> I was able to gain a greater understanding on how to present complex topics to a broader audience.</h2>
 				</div>
 			</div>
@@ -179,14 +179,15 @@
 
 
 			<div class="section-full flex-center">
-				<div class="pull-tech-color blue flex-center rounded-corners">
+				<div class="pull-tech-color yellow flex-center rounded-corners">
 					<div class="pull-tech flex-sb">
-						<div class="cta-text white">
-							<h2>The Kitsune App is a product that advocates for alternative transportation.</h2>
-							<a href="kitsuneApp.html""><h4>View Case Study</h4></a>
+						<div class="cta-flex" style="align-self: center;">
+						<div class="pull-tech-text">
+							<h2 class="charcoal">Brainstation rebrand; pushing the boundaries of traditional education.</h2></div>
+							<div class="cta-text-black" style="align-self: center;"><a href="brainStation.html"><h4>View case study</h4></a></div>
 						</div>
 						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneAppCTA.svg"> Kitsune App cta </object>
+							<object type="image/svg+xml" data="images/BrainStationCTA.svg"> Kitsune App cta </object>
 						</div>
 					</div>
 				</div>
@@ -200,7 +201,7 @@
 		<div class="footer-container ">
 			<div class="footer">
 				<ul class="footer-content flex-sb">
-					<li><h5>Brock Donaldson © 2018</h5></li>
+					<li><h5>Brock Donaldson © 2019</h5></li>
 
 				</ul>
 			</div>
@@ -210,7 +211,7 @@
 		<div class="footer-container-mobile">
 			<div class="footer">
 				<ul class="footer-content flex-sb">
-					<li><h5>Brock Donaldson © 2018</h5></li>
+					<li><h5>Brock Donaldson © 2019</h5></li>
 			</div>
 		</div>
 
