--- a/kitsuneApp.html
+++ b/kitsuneApp.html
@@ -103,7 +103,7 @@
 			<div class="highlight-colour-project blue"></div>
 
 			<div class="project-header">
-				<h1 class="project-title hidden">The Kitsune App</h1>
+				<h1 class="project-title hidden">Kitsune  App</h1>
 			</div>
 
 
@@ -113,7 +113,7 @@
 
 			<div class="challenge-container flex-center">
 				<div class="medium-container-ch">
-					<h4 class="type-challenge">CHALLENGE</h4>
+					<h4 class="type-challenge">challenge —</h4>
 					<h2> To create a product that allows users to track their daily commute, while focusing on understanding health and fitness trends that arise through alternative transportation.  </h2>
 				</div>
 			</div>
@@ -128,7 +128,7 @@
 							<img src="images/KitsuneAppMockup2.png" alt="Kitsune App Angled Device Mockup">
 						</div>
 						<div class="pull-tech-text-grad white">
-							<h2> Using the app is as simple as connecting to the board and syncing a recent trip. </h2>
+							<h2 class="white"> Using the app is as simple as connecting to the board and syncing a recent trip. </h2>
 						</div>
 					</div>
 				</div>
@@ -152,7 +152,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> APP FUNCTIONALITY </h4>
+					<h4>app functionality —</h4>
 					<p>While the board can stand as a product on its own, the true value comes out of the synchronous use with the companion application. The Kitsune App allows users to gain multiple different improvements to their daily commute. Three key features create the core experience of the Kitsune Board and App.</p>
 
 					<p><strong>Travel Logs</strong><br>A synchronised connection between the app and board allows users to record travel metrics after each trip. In doing so, the application will gather metrics from both the user and board to create an accurate travel history.</p>
@@ -165,20 +165,20 @@
 
 			<div class="section-full flex-center">
 				<div class="image-span-container">
-					<img src="images/KitsuneAppMockup4.png" alt="Kitsune App Smart Watch Mockup">
+					<img src="images/KitsuneAppMockup4b.png" alt="Kitsune App Smart Watch Mockup">
 				</div>
 			</div>
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-					<h4> COLLABORATION </h4>
+					<h4>collaboration —</h4>
 					<p> In the past fews there has been a growing trend of sharing and socializing in the health and fitness community. Apps such as Nike+ Run Club and Strava allow users to create goals, track fitness statistics, with the added bonus of recording and sharing their experience with others. </p>
 
 					<p> In a sense, not only do these apps help with individual growth and improvement, but they allow users to find many individuals that are challenging themselves in the same way. Incorporating a sharing feature not only allows product awareness but also creates a connected network of user experiences and growth. </p>
 
 					<br><br>
 
-					<h4>RESEARCH CONCLUSIONS</h4>
+					<h4>research conclusion —</h4>
 					<p>When looking towards the future, I wanted to explore new possibilities in human commuting behaviour that are rarely reviewed. By identifying pain points, I sought to improve upon congested areas of a user’s commute. These primarily being between transit systems where the user finds themselves walking for five to ten minutes to meet their transfer. Finding solutions to these pain points allowed me to solve the problems as a whole.</p>
 				</div>
 			</div>
@@ -196,7 +196,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-				<h4>INITIAL SKETCHES</h4>
+				<h4>initial sketches —</h4>
 				<p>I began by wireframing on paper to get a general sense of app’s flow. This allowed me to map out the user flow on a high level, and then go in with more detail for individual features.</p>
 				</div>
 			</div>
@@ -231,8 +231,8 @@
 			<div class="section-full flex-center">
 				<div class="pull-tech-color grey flex-center">
 					<div class="pull-tech flex-sb">
-						<div class="pull-tech-text charcoal">
-							<h2> The App and Board communicate through installed NFC hardware in the body of the board. </h2>
+						<div class="pull-tech-text light-charcoal">
+							<h2> The App and Board communicate through installed NFC hardware <br>in the body of the board. </h2>
 						</div>
 						<div class="pull-tech-drawing">
 							<object type="image/svg+xml" data="images/KitsuneBoardTech3.svg"> Kitsune App Technical Drawing (Folding) </object>
@@ -243,7 +243,7 @@
 
 			<div class="section-padding flex-center">
 				<div class="content-container">
-				<h4>WIREFRAMES</h4>
+				<h4>wireframes —</h4>
 				<p>Through the initial sketches I identified 5 key screens that act as entry points for the many sub level screens: Login, a Dashboard, Route Navigation,  an Account, and a Ride Analytic page. </p>
 
 				</div>
@@ -273,21 +273,22 @@
 
 		<div class="learning-outcome-container flex-center">
 				<div class="medium-container-ch">
-					<h4 class="type-challenge">LEARNING OUTCOME</h4>
+					<h4 class="type-challenge">learning outcome —</h4>
 					<h2> This product helped to strengthen my overall design process by allowing me to complete more focused user journeys & user research, resulting in key pain-points that I was then able to build into featured solutions.</h2>
 				</div>
 			</div>
 
 
 			<div class="section-full flex-center">
-				<div class="pull-tech-color blue flex-center rounded-corners">
+				<div class="pull-tech-color yellow flex-center rounded-corners">
 					<div class="pull-tech flex-sb">
-						<div class="cta-text white">
-							<h2>The companion product acts as the base for the added functionality of the Kitsune mobile app.</h2>
-							<a href="kitsuneBoard.html"><h4>View Case Study</h4></a>
+						<div class="cta-flex" style="align-self: center;">
+						<div class="pull-tech-text">
+							<h2 class="charcoal">Brainstation rebrand; pushing the boundaries of traditional education.</h2></div>
+							<div class="cta-text-black" style="align-self: center;"><a href="brainStation.html"><h4>View case study</h4></a></div>
 						</div>
 						<div class="pull-tech-drawing">
-							<object type="image/svg+xml" data="images/KitsuneBoardCTA.svg"> Kitsune App cta </object>
+							<object type="image/svg+xml" data="images/BrainStationCTA.svg"> Kitsune App cta </object>
 						</div>
 					</div>
 				</div>
@@ -301,7 +302,7 @@
 		<div class="footer-container">
 			<div class="footer">
 				<ul class="footer-content flex-sb">
-					<li><h5>Brock Donaldson © 2018</h5></li>
+					<li><h5>Brock Donaldson © 2019</h5></li>
 
 				</ul>
 			</div>
@@ -310,7 +311,7 @@
 		<div class="footer-container-mobile">
 			<div class="footer">
 				<ul class="footer-content flex-sb">
-					<li><h5>Brock Donaldson © 2018</h5></li>
+					<li><h5>Brock Donaldson © 2019</h5></li>
 			</div>
 		</div>
 
